<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:aandroid="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/linearLayoutPadding">

        <EditText
            android:id="@+id/et_search_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number"
            android:inputType="text"
            android:padding="@dimen/et_search_padding"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"/>

    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poster"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TableLayout
                android:id="@+id/tl_pesponse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rated"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_rated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/year"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_director"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_plot_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plot"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/tv_plot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_error_message"
        android:textSize="22sp"
        android:padding="@dimen/horizontal_padding"
        android:text="@string/error_message"
        android:visibility="invisible"/>
    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_width="45dp"
        android:layout_height="45dp"/>
</LinearLayout>